Closed Bug 735228 Opened 13 years ago Closed 13 years ago

CAccessibleComponent shouldn't use GetComputedStyle

Categories

(Core :: Disability Access APIs, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: surkov, Assigned: surkov)

References

Details

Attachments

(1 file)

No description provided.
OS: Mac OS X → Windows 7
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #605435 - Flags: review?(trev.saunders)
Comment on attachment 605435 [details] [diff] [review] patch fix the property gtters to return S_OK when they succeed
Attachment #605435 - Flags: review?(trev.saunders) → review+
Target Milestone: --- → mozilla14
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: