Bug 735228 - CAccessibleComponent shouldn't use GetComputedStyle, r=tbsaunde